# cpp-interpreter

./: .gitignore  .is  CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: SymbolTable.cpp.277DCE6966E5BB61.idx  SymbolTable.h.B8E0C72EFE0215D9.idx  function_test.cpp.3EB4D6EE841F1359.idx  illegal_ops_test.cpp.661DB1BD2D5EB00D.idx  interpreter.cpp.0891BC838B840C49.idx  interpreter.cpp.8B051B25BEA68ECA.idx  interpreter.h.5D7A91BF4083B7BA.idx  interpreter.h.D5D93F4607D0BCB0.idx  lexer.cpp.C32072C390248B3D.idx  lexer.h.7043F1C8367E4A12.idx  loop_and_branch_test.cpp.BDAEADD11B886CAD.idx  main.cpp.B95EF83AA32E1905.idx  nodes.cpp.6077B808286248F8.idx  nodes.h.F196E81A77608848.idx  parser.cpp.0501B055EE080769.idx  parser.h.2D68096EE059B9E6.idx  tokens.cpp.E97C76193E78961A.idx  tokens.h.DEB74738F5A4BEEB.idx  types_test.cpp.B5E81FDCD1971244.idx
examples/: test.is
lib/: CMakeLists.txt
lib/ast/: nodes.cpp  nodes.h
lib/interpreter/: call_stack.h  interpreter.cpp  interpreter.h
lib/lexer/: lexer.cpp  lexer.h
lib/parser/: parser.cpp  parser.h
lib/symbol_table/: SymbolTable.cpp  SymbolTable.h
lib/tokens/: tokens.cpp  tokens.h
res/: IS.jpg:Zone.Identifier  play.png:Zone.Identifier
tests/: CMakeLists.txt  function_test.cpp  illegal_ops_test.cpp  int_funcs.cpp  list_funcs.cpp  loop_and_branch_test.cpp  stacktrace_test.cpp  string_funcs.cpp  types_test.cpp
